Style update on compose, fixed overflow bug with canned responses

--- a/assets/css/cloudwalkers.css
+++ b/assets/css/cloudwalkers.css
@@ -1539,6 +1539,10 @@ counter	{
  	width: 300px;
  }
 
+ #menu li a{
+ 	cursor: pointer;
+ }
+
  .trigger{
  	position: relative;
  }
