--- a/assets/css/pages/compose.css
+++ b/assets/css/pages/compose.css
@@ -28,7 +28,8 @@ Style corrections and manual overrides
 **/
 
 #compose aside	{
-	float: left; width: 260px; padding: 12px 0 24px; opacity: 1;
+	/*float: left; width: 260px; padding: 12px 0 24px; opacity: 1;*/
+	float: left; width: 260px; padding: 12px 0 0px; opacity: 1;
 }
 
 #compose aside ul	{
@@ -79,13 +80,17 @@ Style corrections and manual overrides
 	margin-left: 260px; border-left: 1px solid #aaa; background-color: #fff; border-radius: 0px 2px 2px 0px;
 }
 
+#compose .modal-content{
+	float: left; width: 100%; height: 100%; position: relative;
+}
+
 #compose .modal-header	{ 
 	padding: 12px 12px 0; border-bottom-width: 0;
 }
 
 #compose .modal-body	{
 	padding: 0;
-	overflow-x: hidden;
+	overflow-x: visible;
 }
 
 #compose .modal-body section	{
